--- a/index/galeria.html
+++ b/index/galeria.html
@@ -29,18 +29,36 @@
         </nav>
     </ul>
     </header>
-    <main class="medio">
-    <div >
+    <main class="contenedor">
         <h1 class="galeriaL">Galeria</h1>
-          <img class="img1" src="../img/lauren-jauregui-123.webp" alt="">
-          <img class="img2" src="../img/627d4a13c148978a9b6b4bb88d8773c9.jpg" alt="">
-            <img class="img3" src="../img/1575374717_631493_1575374772_noticia_normal.jpg" alt="">
-            <img class="img4" src="../img/lauren.1210_ES1213914_MG254902419.jpg" alt="">
-            <img class="img5" src="../img/lauren-fifth-harmony-2.webp" alt="">
-            <img class="img6" src="../img/Lauren_Jauregui_2017_(cropped).jpg" alt="">
-            <img class="img7" src="../img/U1dRyCxP_400x400.jpg" alt="">
-            <img class="img8" src="../img/73B3JFPXJBD6TK6VVFSDV22UEY.jpg" alt="">
-            <img class="img9" src="../img/lauren-jauregui-shangay-3-1 (1).jpg" alt="">
+
+
+    <div class="img">
+          <img  src="../img/lauren-jauregui-123.webp" alt="">
+          </div>
+            <div class="img">
+          <img  src="../img/627d4a13c148978a9b6b4bb88d8773c9.jpg" alt="">
+          </div>
+          <div class="img">
+            <img src="../img/1575374717_631493_1575374772_noticia_normal.jpg" alt="">
+           </div>
+           <div class="img">
+           <img  src="../img/lauren.1210_ES1213914_MG254902419.jpg" alt="">
+          </div>
+          <div class="img">
+           <img  src="../img/lauren-fifth-harmony-2.webp" alt="">
+        </div>
+        <div class="img">
+           <img  src="../img/Lauren_Jauregui_2017_(cropped).jpg" alt="">
+        </div>
+        <div class="img">
+            <img  src="../img/U1dRyCxP_400x400.jpg" alt="">
+        </div>
+        <div class="img">
+            <img  src="../img/73B3JFPXJBD6TK6VVFSDV22UEY.jpg" alt="">
+        </div>
+        <div class="img">
+            <img  src="../img/lauren-jauregui-shangay-3-1 (1).jpg" alt="">
         </div>
     </main>
 
